fix api keys legibility
with lots of numbers and letters mixed together, uppercase can increase
legibility/clarity in the type

--- a/css/inner/settings/api.less
+++ b/css/inner/settings/api.less
@@ -94,6 +94,7 @@
     }
     &:nth-child(2) {
       font-family: @monoFontFamily;
+      text-transform: uppercase;
     }
     button {
       font-size: 1em;
